# arbor

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: flutter.yml  rust.yml  set-topics.yml
crates/: Cargo.toml  clippy_output.txt  clippy_output_2.txt  error.txt
crates/arbor-cli/: Cargo.toml  README.md
crates/arbor-cli/src/: commands.rs  main.rs
crates/arbor-cli/src/gui/: app.rs  mod.rs
crates/arbor-core/: Cargo.toml  README.md
crates/arbor-core/src/: error.rs  lib.rs  node.rs  parser.rs  parser_v2.rs
crates/arbor-core/src/languages/: c.rs  cpp.rs  dart.rs  go.rs  java.rs  mod.rs  python.rs  rust.rs  typescript.rs
crates/arbor-graph/: Cargo.toml  README.md
crates/arbor-graph/src/: builder.rs  confidence.rs  edge.rs  graph.rs  heuristics.rs  lib.rs  query.rs  ranking.rs  slice.rs  store.rs  symbol_table.rs
crates/arbor-gui/: Cargo.toml
crates/arbor-gui/src/: app.rs  main.rs
crates/arbor-mcp/: Cargo.toml  README.md
crates/arbor-mcp/src/: lib.rs
crates/arbor-server/: Cargo.toml  README.md
crates/arbor-server/src/: handlers.rs  lib.rs  protocol.rs  server.rs  sync_server.rs
crates/arbor-watcher/: Cargo.toml  README.md
crates/arbor-watcher/src/: indexer.rs  lib.rs  watcher.rs
docs/: ADDING_LANGUAGES.md  ARCHITECTURE.md  GOOD_FIRST_ISSUES.md  GRAPH_SCHEMA.md  MCP_INTEGRATION.md  PROTOCOL.md  QUICKSTART.md  RELEASE_NOTES_v1.4.0.md  ROADMAP.md
docs/assets/: terminal-demo.html
visualizer/: pubspec.yaml
visualizer/lib/: main.dart
visualizer/lib/core/: protocol.dart  providers.dart  theme.dart
visualizer/lib/graph/: force_layout.dart  graph_painter.dart  graph_widget.dart  quad_tree.dart
visualizer/lib/services/: websocket_service.dart
visualizer/lib/views/: forest_view.dart
visualizer/macos/Runner.xcodeproj/: project.pbxproj
visualizer/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
visualizer/macos/Runner/Configs/: AppInfo.xcconfig
visualizer/test/: widget_test.dart
