[package]
name = "arbor-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Graph schema and relationship tracking for Arbor"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
sled = "0.34"
bincode = "1.3"

arbor-core = { path = "../arbor-core", version = "1.4.1" }
petgraph = { version = "0.6", features = ["serde-1"] }
tiktoken-rs = "0.5"
once_cell = "1.19"

[dev-dependencies]
tempfile = "3.0"
