[package]
name = "arbor-gui"
version = "0.1.0"
edition = "2021"
description = "Arbor GUI - Impact-first code analysis interface"

[dependencies]
arbor-core = { path = "../arbor-core" }
arbor-graph = { path = "../arbor-graph" }
arbor-watcher = { path = "../arbor-watcher" }
eframe = "0.28"
egui = "0.28"
arboard = "3.4"  # Clipboard support

[[bin]]
name = "arbor-gui"
path = "src/main.rs"
