[package]
name = "arbor-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Arbor GUI - Impact-first code analysis interface"

[dependencies]
arbor-core = { path = "../arbor-core", version = "1.4.1" }
arbor-graph = { path = "../arbor-graph", version = "1.4.1" }
arbor-watcher = { path = "../arbor-watcher", version = "1.4.1" }
eframe = "0.28"
egui = "0.28"
egui_extras = { version = "0.28", features = ["all_loaders"] }
image = { version = "0.25", features = ["jpeg", "png"] } # Required for image loading
arboard = "3.4"  # Clipboard support
resvg = "0.44"

[[bin]]
name = "arbor-gui"
path = "src/main.rs"
