[package]
name = "arbor-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WebSocket server implementing the Arbor Protocol"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true

arbor-core = { path = "../arbor-core", version = "1.4.1" }
arbor-graph = { path = "../arbor-graph", version = "1.4.1" }
arbor-watcher = { path = "../arbor-watcher", version = "1.4.1" }

tokio-tungstenite = "0.21"
futures-util = "0.3"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
notify = "6.1"
bincode = "1.3"

